[workspace]
members                 = [
  "./handles",
]
default-members         = [
  "./handles",
]
resolver                = "2"

[workspace.dependencies]
fs                      = { path = "pants/src/rust/engine/fs" }
hashing                 = { path = "pants/src/rust/engine/hashing" }
store                   = { path = "pants/src/rust/engine/fs/store" }
task_executor           = { path = "pants/src/rust/engine/task_executor" }

# Versions with my own fixes in.
displaydoc              = "0.2.4"
thiserror               = "1.0.30"

# From pants/src/rust/engine/Cargo.toml (.cargo/config also copied from the pants repo):
arc-swap                = "1.5"
async-lock              = "2.5"
async-oncecell          = "0.2"
async-stream            = "0.3"
async-trait             = "0.1"
axum                    = "0.6"
axum-server             = "0.5"
bincode                 = "1.3.3"
bollard                 = "0.14.0"
byteorder               = "1.4"
bytes                   = "1.2"
chrono                  = "0.4.22"
clap                    = "3"
colored                 = "2.0.0"
console                 = "0.15.2"
criterion               = "0.4"
crossbeam-channel       = "0.5"
# TODO: Waiting on https://github.com/Aeledfyr/deepsize/pull/{30,31,32}.
deepsize                = { git = "https://github.com/stuhood/deepsize.git", rev = "5c8bee5443fcafe4aaa9274490d354412d0955c1" }
derivative              = "2.2"
digest                  = "0.10"
dirs-next               = "2"
docker_credential       = "1.2"
either                  = "1"
env_logger              = "0.10.0"
errno                   = "0.2.8"
fixedbitset             = "0.4"
fnv                     = "1.0.5"
fs-set-times            = "0.19"
fuser                   = "0.11.1"
futures                 = "0.3"
futures-core            = "^0.3.23"
generic-array           = "0.14"
glob                    = "0.3.0"
hdrhistogram            = "7.5"
hex                     = "0.4.3"
http                    = "0.2"
http-body               = "0.4"
humansize               = "1.1"
hyper                   = "0.14"
hyper-rustls            = "0.24"
ignore                  = { git = "https://github.com/pantsbuild/ripgrep.git", rev = "0f7e0fdd00ae528745a7fea24a320cae98235341" }
indexmap                = "1.9"
indicatif               = "0.17"
internment              = "0.6"
itertools               = "0.10"
lazy_static             = "1"
libc                    = "0.2.137"
lmdb-rkv                = { git = "https://github.com/pantsbuild/lmdb-rs.git", rev = "6ae7a552aa2c932c3ddf652a68cdde2fed547cbc" }
log                     = "0.4.17"
madvise                 = "0.1"
maplit                  = "1.0.1"
memmap                  = "0.7"
nails                   = "0.13"
nix                     = "0.25"
notify                  = { git = "https://github.com/pantsbuild/notify", rev = "276af0f3c5f300bfd534941386ba2f3b3a022df7" }
num_cpus                = "1"
num_enum                = "0.5"
once_cell               = "1.18"
os_pipe                 = "1.1"
parking_lot             = "0.12"
peg                     = "0.8"
petgraph                = "0.6"
pin-project             = "1.0.12"
pin-project-lite        = "0.2"
prodash                 = { git = "https://github.com/stuhood/prodash", rev = "stuhood/raw-messages-draft", version = "16", default-features = false, features = [
  "progress-tree",
  "render-line",
  "render-line-termion",
] }
prost                   = "0.11"
prost-build             = "0.11"
prost-types             = "0.11"
pyo3                    = "0.19"
rand                    = "0.8"
regex                   = "1"
rlimit                  = "0.8"
rustls                  = "0.21.1"
rustls-native-certs     = "0.6"
rustls-pemfile          = "1.0"
serde                   = "1.0.160"
serde_derive            = "1.0.98"
serde_json              = "1.0"
serde_test              = "1.0"
sha2                    = "0.10"
shell-quote             = "0.3.0"
shellexpand             = "2.1"
shlex                   = "1.1.0"
strum                   = "0.24"
strum_macros            = "0.24"
sysinfo                 = "0.20.0"
tempfile                = "3.5.0"
terminal_size           = "0.1.15"
time                    = "0.3.20"
tokio                   = "1.28"
tokio-retry             = "0.3"
tokio-rustls            = "0.24"
tokio-stream            = "0.1"
tokio-test              = "0.4.3"
tokio-util              = "0.7"
toml                    = "0.5"
tonic                   = "0.9"
tonic-build             = "0.9"
tower                   = "0.4"
tower-layer             = "0.3"
tower-service           = "0.3"
tree-sitter             = "0.20.10"
tree-sitter-javascript  = "0.20.0"
tree-sitter-python      = "0.20.2"
uname                   = "0.1.1"
url                     = "2.4"
uuid                    = "1.1.2"
walkdir                 = "2"
webpki                  = "0.21"

[workspace.package]
version                 = "0.0.0"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition                 = "2021"
license                 = "Apache-2.0"

keywords                = []
categories              = []
homepage                = "https://github.com/cosmicexplorer/pants-rs"
repository              = "https://github.com/cosmicexplorer/pants-rs"
