[package]
name                    = "executor-resource-handles"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true

keywords.workspace      = true
categories.workspace    = true
homepage.workspace      = true
repository.workspace    = true

[dependencies]
async-trait.workspace   = true
bytes.workspace         = true
displaydoc.workspace    = true
fs.workspace            = true
hashing.workspace       = true
parking_lot.workspace   = true
store.workspace         = true
task_executor.workspace = true
tempfile.workspace      = true
thiserror.workspace     = true
tokio.workspace         = true

[dev-dependencies]
tokio                   = { workspace = true, features = ["macros"] }
