[package]
name                    = "executor-resource-handles"
version.workspace       = true
authors.workspace       = true
edition.workspace       = true
license.workspace       = true

keywords.workspace      = true
categories.workspace    = true
homepage.workspace      = true
repository.workspace    = true

[dependencies]
async-stream.workspace  = true
async-trait.workspace   = true
bytes.workspace         = true
displaydoc.workspace    = true
fs.workspace            = true
futures.workspace       = true
futures-util.workspace  = true
hashing.workspace       = true
parking_lot.workspace   = true
store.workspace         = true
task_executor.workspace = true
tempfile.workspace      = true
thiserror.workspace     = true
tokio.workspace         = true
tokio-stream.workspace  = true
# zip-merge               = { version = "0.6.6", features = ["merge", "rayon", "time"] }
zip-merge               = { path = "/home/cosmicexplorer/tools/zip", features = ["merge", "rayon", "time"] }

[dev-dependencies]
tokio                   = { workspace = true, features = ["macros"] }
tokio-test.workspace    = true
